[package]
name = "password-gen"
version = "0.1.2"
edition = "2021"
description = "Library for generating passwords"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tacentio/password-gen"
repository = "https://github.com/tacentio/password-gen"

[dependencies]
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
