[package]
name = "password-gen"
version = "2.0.2"
edition = "2021"
description = "Library for generating passwords"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tacentio/password-gen"
repository = "https://github.com/tacentio/password-gen"

[dependencies]
rand = "0.8.4"
serde = { version = "1.0", default-features=false, features = ["derive"], optional = true }
[features]
cereal = ["serde/derive"]
